testsuite/poke.pkl/cast-array-diag-1.pk
/* { dg-do compile } */

defvar a = [1,2] as int[3]; /* { dg-error "" } */
